--- a/dat.html
+++ b/dat.html
@@ -39,14 +39,13 @@ Array.prototype.remove = function(val) {
     return this;
 }
 
-//rendering and event handling be here
-
-//some magic numbers, "immutable" rofl
+//magic constants
 var TOPLEFT = { x: 0, y: 0 };
 var TOPRIGHT = { x: 800, y: 0 };
 var BOTTOMLEFT = { x: 0, y: 600 };
 var BOTTOMRIGHT = { x: 800, y: 600 };
 
+//variable names no longer refer to color within
 var LIGHTBLUE = '#169D5B';
 var DARKBLUE = '#513317';
 var LIGHTYELLOW = '#FFF176';
@@ -63,12 +62,12 @@ c.oncontextmenu = function (e) {
 
 var PathVertices = [ 
 {
-	x: TOPLEFT.x + 20,
-	y: TOPRIGHT.y + 20
+	x: TOPLEFT.x + 40,
+	y: TOPRIGHT.y + 40
 }, 
 {
-	x: BOTTOMRIGHT.x - 20,
-	y: BOTTOMRIGHT.y - 20
+	x: BOTTOMRIGHT.x - 40,
+	y: BOTTOMRIGHT.y - 40
 }
 ];
 
@@ -78,7 +77,8 @@ var MouseDown = function(e) {
 	var x = e.pageX;
 	var y = e.pageY;
 	var vertex = { x: x - c.offsetLeft, y: y - c.offsetTop};
-	//path
+	
+	//toggle triangle pathability
 	if(e.shiftKey || e.ctrlKey) {
 		TogglePathability(vertex);		
 		return;
@@ -87,6 +87,7 @@ var MouseDown = function(e) {
 	//left click
 	if(e.button === 0) {
 		var pathNode = GetPathNodeSelection(vertex);
+		//check if grabbing a pathnode
 		if(pathNode != null) {
 			DraggingPathNode = pathNode;
 		} else {
@@ -120,23 +121,43 @@ var MouseMove = function(e) {
 	}
 }
 
+var MouseLeave = function(e) {
+	DraggingPathNode = null;
+}
+
 c.addEventListener("mousedown", MouseDown, false);
 c.addEventListener("mousemove", MouseMove, false);
 c.addEventListener("mouseup", MouseUp, false);
+c.addEventListener("mouseleave", MouseLeave, false);
 var Ctx=c.getContext("2d");
 Ctx.lineWidth = 2;
 
+var DrawVertices = function(triangle, colour) {
+	Ctx.strokeStyle = colour;
+	Ctx.fillStyle = colour;
+	for(var i = 0; i < 3; i++) {
+		Ctx.beginPath();
+		Ctx.arc(triangle.vertices[i].x, triangle.vertices[i].y, 5, 0, 2 * Math.PI, false);
+		Ctx.stroke();
+		Ctx.fill();
+		Ctx.closePath();
+	}
+}
+
 var DrawTriangle = function(triangle, highlight, ispathnode) {
 	Ctx.strokeStyle = DARKBLUE;
+		
 	if(highlight) {
+		DrawVertices(triangle, LIGHTRED);
+		
 		Ctx.strokeStyle= LIGHTRED;
-		//draw arc too
 		var circle = triangle.GetCircumcircle();
 		Ctx.beginPath();
 		Ctx.arc(circle.x, circle.y, circle.r, 0, 2 * Math.PI, false);
 		Ctx.stroke();
 		Ctx.closePath();
 	}
+	
 	Ctx.beginPath();
 	for (var i = 0; i < 3; i++) {
 		var j = (i + 1) % 3;
@@ -167,6 +188,12 @@ var DrawTriangles = function() {
 		DrawTriangle(Triangles[i]);
 	}
 	DrawPathNodes();
+}
+
+var SelectTriangle = function(vertex) {
+	DrawTriangles();
+	var triangle = GetTriangle(vertex);
+	DrawTriangle(triangle, true);
 }
 
 var DrawLines = function(path) {
@@ -627,14 +654,6 @@ var CheckAndFlip = function(t) {
 	}
 }
 
-//interactive bs
-
-var SelectTriangle = function(vertex) {
-	DrawTriangles();
-	var triangle = GetTriangle(vertex);
-	DrawTriangle(triangle, true);
-}
-
 var TogglePathability = function(vertex) {
 	var triangle = GetTriangle(vertex);
 	if(triangle !== null) {		
@@ -643,124 +662,6 @@ var TogglePathability = function(vertex) {
 	}
 }
 
-var Prepared = function() {
-	Initialize();
-	
-	var data = [
-		{ x: 87, y: 147 },
-		{ x: 104, y: 203 },
-		{ x: 137, y: 220 },
-		{ x: 98, y: 271 },
-		{ x: 166, y: 380 },
-		{ x: 182, y: 330 },
-		{ x: 186, y: 349 },
-		{ x: 304, y: 375 },
-		{ x: 265, y: 305 },
-		{ x: 320, y: 336 },
-		{ x: 206, y: 290 },
-		{ x: 203, y: 245 },
-		{ x: 262, y: 213 },
-		{ x: 157, y: 191 },
-		{ x: 173, y: 172 },
-		{ x: 172, y: 130 },
-		{ x: 101, y: 108 },
-		{ x: 210, y: 54 },
-		{ x: 275, y: 36 },
-		{ x: 260, y: 99 },
-		{ x: 311, y: 124 },
-		{ x: 369, y: 107 },
-		{ x: 388, y: 42 },
-		{ x: 419, y: 84 },
-		{ x: 477, y: 41 },
-		{ x: 518, y: 65 },
-		{ x: 519, y: 266 },
-		{ x: 541, y: 200 },
-		{ x: 546, y: 238 },
-		{ x: 575, y: 282 },
-		{ x: 609, y: 246 },
-		{ x: 629, y: 189 },
-		{ x: 548, y: 157 },
-		{ x: 620, y: 125 },
-		{ x: 533, y: 110 },
-		{ x: 616, y: 54 },
-		{ x: 655, y: 255 },
-		{ x: 619, y: 328 },
-		{ x: 547, y: 349 },
-		{ x: 449, y: 306 },
-		{ x: 447, y: 255 },
-		{ x: 457, y: 191 },
-		{ x: 444, y: 151 },
-		{ x: 409, y: 292 },
-		{ x: 369, y: 187 }
-	];
-	
-	for(var i = 0; i < data.length; i++) {
-		AddVertex(data[i]);
-	}
-	
-	var pathability = [
-		{ x: 128, y: 126 },
-		{ x: 101, y: 155 },
-		{ x: 143, y: 150 },
-		{ x: 117, y: 185 },
-		{ x: 130, y: 206 },
-		{ x: 112, y: 224 },
-		{ x: 145, y: 241 },
-		{ x: 189, y: 247 },
-		{ x: 158, y: 305 },
-		{ x: 166, y: 337 },
-		{ x: 199, y: 361 },
-		{ x: 231, y: 342 },
-		{ x: 209, y: 309 },
-		{ x: 296, y: 333 },
-		{ x: 277, y: 157 },
-		{ x: 247, y: 61 },
-		{ x: 291, y: 80 },
-		{ x: 323, y: 76 },
-		{ x: 350, y: 61 },
-		{ x: 409, y: 61 },
-		{ x: 478, y: 58 },
-		{ x: 493, y: 84 },
-		{ x: 492, y: 119 },
-		{ x: 402, y: 130 },
-		{ x: 413, y: 103 },
-		{ x: 436, y: 170 },
-		{ x: 422, y: 201 },
-		{ x: 472, y: 232 },
-		{ x: 423, y: 260 },
-		{ x: 456, y: 274 },
-		{ x: 495, y: 300 },
-		{ x: 560, y: 318 },
-		{ x: 550, y: 286 },
-		{ x: 549, y: 252 },
-		{ x: 599, y: 280 },
-		{ x: 567, y: 246 },
-		{ x: 630, y: 258 },
-		{ x: 573, y: 228 },
-		{ x: 640, y: 232 },
-		{ x: 576, y: 212 },
-		{ x: 569, y: 181 },
-		{ x: 645, y: 204 },
-		{ x: 610, y: 164 },
-		{ x: 633, y: 85 },
-		{ x: 193, y: 332 },
-		{ x: 182, y: 349 },
-		{ x: 400, y: 78 },
-		{ x: 634, y: 128 }
-	];
-	
-	for(var i = 0; i < pathability.length; i++) {
-		TogglePathability(pathability[i].x, pathability[i].y);
-	}
-	
-	DrawTriangles();
-}
-
-</script>
-
-<script type="text/javascript">
-
-//init rubbish
 var Initialize = function() {
 
 Triangles = [];
