--- a/dat.html
+++ b/dat.html
@@ -39,6 +39,12 @@ Array.prototype.remove = function(val) {
     return this;
 }
 
+if(!Math.hypot) {
+	Math.hypot = function(x, y) {
+		return Math.sqrt(x*x, y*y);
+	}
+}
+
 //magic constants
 var TOPLEFT = { x: 0, y: 0 };
 var TOPRIGHT = { x: 800, y: 0 };
