--- a/dat.html
+++ b/dat.html
@@ -41,7 +41,7 @@ Array.prototype.remove = function(val) {
 
 if(!Math.hypot) {
 	Math.hypot = function(x, y) {
-		return Math.sqrt(x*x, y*y);
+		return Math.sqrt(x*x + y*y);
 	}
 }
 
