--- a/dat.html
+++ b/dat.html
@@ -14,10 +14,10 @@
 
 <div>
 <h4>
-Intructerinos
+Instructions
 </h4>
 <p>
-	Left click selects a triangles or move the path nodes
+	Left click selects a triangle or path node - drag to move path nodes
 <p>
 <p>
 	Right click adds a vertex to the graph
@@ -25,6 +25,9 @@ Intructerinos
 <p>
 	Shift (or Control) + click toggles pathability of a triangle
 <p>
+<p>
+	The triangulated path uses a very naive heuristic and path length calculation at this stage, the red node graph will typically be more accurate 
+</p>
 </div>
 
 <script type="text/javascript">
