--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Instructions
 	Shift (or Control) + click toggles pathability of a triangle
 <p>
 <p>
-	The triangulated path uses a very naive heuristic and path length calculation at this stage, the red node graph will typically be more accurate 
+	The triangulated path uses a very naive heuristic and path length calculation at this stage, the red path (over a uniform grid will typically be more optimal) 
 </p>
 </div>
 
